@@ -17,6 +17,8 @@ update-manager (1:0.111.8) jaunty-proposed; urgency=low
     - when the upgrade starts, remove old hal.postinst to prevent
       the trigger from running that causes network-manager to shutdown
       all connections (LP: #327053)
+  * UpdateManager/Core/MetaRelease.py, UpdateManager/MetaReleaseGObject.py:
+    - fix "no longer supported" message (LP: #364583)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Apr 2009 13:53:01 +0200
 
